PostRepository integration test - delete, exists post, increment likes